@@ -38,6 +38,8 @@
 - Files: Switched back to relative current working directory on windows to workaround problems with unicode characters
 - Hash Parser: Changed the way large strings are handled/truncated within the event buffer if they are too large to fit
 - Hash Parser: Fixed our use of strtok_r () calls
+- Self Test: Skip self-test for mode 8900 user-configurable scrypt settings are incompatible to fixed settings in the self-test hash
+- Self Test: Skip self-test for mode 15700 because settings are too high and create a too long startup time
 
 * changes v4.0.0 -> v4.0.1:
 
